--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,7 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.body {
+  background-color: rgba(242, 169, 155, 0.3);
+}
