--- a/src/App.css
+++ b/src/App.css
@@ -31,23 +31,12 @@
   border-style: solid;
 }
 
-.Box1 {
-  background-color:#F2A99B;
-}
-
-.Box2 {
-
-}
-
-.Box3 {
-
-}
-
 .Navigation {
   background-color: #F2A99B;
   -ms-align-items: center;
   align-items: center;
   list-style-type: none;
+  display: flex;
 }
 
 .NavBox1 {
@@ -60,4 +49,29 @@
 
 .NavBox3 {
   flex: 3;
+}
+
+.Social1 {
+  flex: 1;
+}
+
+.Social2 {
+  flex: 2;
+}
+
+.Social3 {
+  flex: 3;
+}
+
+
+.ContainerPink {
+  background-color: #F2A99B;
+}
+
+.ContainerGray {
+  /*background-color: #;*/
+}
+
+.ContainerBlue {
+  /*background-color: #;*/
 }
